# ComfyUI-BatchFolderTools

./: LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example_workflows/: batch_caption_qwenvl_mod.json  batch_video_caption_qwenvl_mod.json
